[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Forest1.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Forest1" parent="." instance=ExtResource( 2 )]

[node name="AnimalSpawnTimer" type="Timer" parent="."]

[node name="GameStartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="HUD" parent="." instance=ExtResource( 3 )]

[connection signal="game_over" from="." to="HUD" method="_on_Main_game_over"]
[connection signal="game_start" from="." to="HUD" method="_on_Main_game_start"]
[connection signal="remaining_time_changed" from="." to="HUD" method="_on_Main_remaining_time_changed"]
[connection signal="remaining_to_kill_changed" from="." to="HUD" method="_on_Main_remaining_to_kill_changed"]
[connection signal="timeout" from="AnimalSpawnTimer" to="." method="_on_AnimalSpawnTimer_timeout"]
[connection signal="timeout" from="GameStartTimer" to="." method="_on_GameStartTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
